[8.1.0]
 * add raw Response (with HTTP response code and body) as member to the OAuth2AccessTokenErrorResponse
 * add possibility to set "" (empty string) as apiSecret
 * add Slack API (https://slack.com/) (thanks to https://github.com/petrkopotev)

[8.0.0]
 * add Kakao API (https://kakao.com/) (thanks to https://github.com/v0o0v)
 * support chunks in JDKHttpClient's Multipart (thanks to https://github.com/eos1d3)
 * add support for OAuth 2.0 Device Authorization Grant (RFC 8628) (thanks to https://github.com/rebarbora-mckvak)
 * update Google API URLs

[7.1.1]
 * add Proxy support (via config's option) to internal JDKHttpClient (thanks to https://github.com/bjournaud)
 * fix typo (change "Verfier" to "Verifier") (thanks to https://github.com/afkbrb)
 * fix Multipart support in JDKHttpClient (thanks to https://github.com/eos1d3)

[7.0.0]
 * Add Polar API (https://www.polar.com/) (thanks to https://github.com/vidi42)
 * make Response accept resources to autoclose and autoclose it (thanks to https://github.com/drei01)
 * fix url encoding in POST payload (it's needed for 'application/x-www-form-urlencoded' Content-Type)
     + unit tests (thanks to https://github.com/max904-github)
 * Add Armeria HTTP client (thanks to https://github.com/max904-github)

[6.9.0]
 * Add Xero API (https://www.xero.com/) (thanks to https://github.com/SidneyAllen)

[6.8.1]
 * make Response implements Closeable (thanks to https://github.com/omaric)
 * fix Type resolution for builder pattern in ServiceBuilderOAuth10a (thanks to https://github.com/mgyucht)
 * fix no Content-length errors (thanks to https://github.com/mikita-herasiutsin and https://github.com/iankurverma)

[6.8.0]
 * Add debug output to OAuth2Service (thanks to https://github.com/rbarbey)
 * Add Dropbox API (https://www.dropbox.com/) (thanks to https://github.com/petrkopotev)

[6.7.0]
 * Add OAuth2 support for Meetup.com (thanks to https://github.com/stevedes77)