@@ -54,7 +54,7 @@
         <dependency>
             <groupId>com.fasterxml.jackson.core</groupId>
             <artifactId>jackson-databind</artifactId>
-            <version>2.12.0</version>
+            <version>2.12.1</version>
         </dependency>
         <dependency>
             <groupId>junit</groupId>
@@ -104,7 +104,7 @@
                         <dependency>
                             <groupId>com.puppycrawl.tools</groupId>
                             <artifactId>checkstyle</artifactId>
-                            <version>8.38</version>
+                            <version>8.39</version>
                         </dependency>
                     </dependencies>
                 </plugin>
@@ -188,6 +188,7 @@
                     <javadocExecutable>${java.home}/bin/javadoc</javadocExecutable>
                     <encoding>UTF-8</encoding>
                     <additionalOptions>-html5</additionalOptions>
+                    <doclint>all,-missing</doclint>
                 </configuration>
                 <executions>
                     <execution>
